[package]
name = "pwd"
version = "0.0.16"
authors = ["uutils developers"]
license = "MIT"
description = "pwd ~ (uutils) display current working directory"

homepage = "https://github.com/uutils/coreutils"
repository = "https://github.com/uutils/coreutils/tree/main/src/uu/pwd"
keywords = ["coreutils", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "3.2", features = ["wrap_help", "cargo"] }
